<resources>
    <string name="app_name">FIAP Android App</string>
    <string name="app_version">App Version:</string>
    <string name="about">about</string>
    <string name="app_developers">App developers:</string>
    <string name="developer1" translatable="false">Bruno - 334070</string>
    <string name="developer2" translatable="false">Caio - 333950</string>
    <string name="developer3" translatable="false">Heuler - 333943</string>
    <string name="developer4" translatable="false">Rafael - 334076</string>
    <string name="e_mail" translatable="false">e-mail</string>
    <string name="password">password</string>
    <string name="stay_connected">Stay connected?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="new_user">New User</string>
    <string name="user_name">name</string>
    <string name="phone_number">phone number</string>
    <string name="confirm_password">confirm password</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="short_password">password must have at least 6 characters</string>
    <string name="stay_connected_off">variable Stay Connected set off</string>
    <string name="pass_dont_match">Password don\'t match!</string>
    <string name="user_created">successfully created user</string>
    <string name="user_error">Error creating user</string>
    <string name="logo">Logo</string>
    <string name="product_created">Product created successfully!</string>
    <string name="product_deleted">Product deleted!</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit from App</string>
    <string name="id">ID</string>
    <string name="product_name">Product Name</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_product">Update Product</string>
    <string name="save">Save</string>
    <string name="image_of_android_cellphone">Image of android cellphone</string>
    <string name="product_list">Product List</string>
    <string name="new_product">New Product</string>
    <string name="insert_your_new_product">Insert Your New Product</string>
    <string name="name">Name</string>
    <string name="info">Info:</string>
</resources>
